[package]
name = "rsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
jack = "0.11.4"
num = "0.4.1"
ratatui = "0.23.0"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
