[package]
name = "rsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.27.0"
jack = "0.11.4"
notify = "6.1.1"
num = "0.4.1"
ratatui = "0.23.0"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typetag = "0.2.13"
